# python-project-lvl1

./: Makefile  README.md  pyproject.toml  setup.cfg
.github/workflows/: github-action.yml
brain_games/: engine.py
brain_games/games/: ariphm_progression.py  calc.py  engine.py  even.py  gcd.py  nod.py  prime.py
brain_games/modules/: cli_interaction.py  even_game.py
brain_games/scripts/: __main__.py  brain_calc.py  brain_even.py  brain_games.py  brain_gcd.py  brain_nod.py  brain_prime.py  brain_progression.py  cli.py
